@@ -33,6 +33,7 @@ private:
 	QElapsedTimer m_lastStatusUpdate;
 
 	AutoResetState m_autoResetRequestStatus = AutoResetState::NotSent;
+	int m_nextCatchupKey = 1;
 };
 
 }
